dlama-service/overlay/sta/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sta-d-lama-service-ingress
#  annotations:
#    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: db.dlama-stage.init-lab.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: d-lama-service
            port:
              number: 80
